--- a/coursera/w4e/assigments/3/css/block.css
+++ b/coursera/w4e/assigments/3/css/block.css
@@ -1,15 +1,43 @@
-
-/* This is a partial blocks.css, you need to add more rules
- *    to this file to complete the assignment.  Do not add any CSS
- *       styling to the original index.htm / start.htm */
-
 body {
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-        
+    background: #fff;
+    font-family:  Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
-
-/* Here is one of many  CSS rules you will need... */
-#one {
-        
-    
+.box {
+    border-style: solid;
+    border-width: 5px;
+    border-style: solid;
+    padding: 5px;
+    margin: 5px;
+    width: 25%;
+}
+#orange {
+    padding: fixed;
+    top: 0;
+    left: 0 ;
+    border-color: orange;
+}
+#green {
+    position: fixed;
+    top: 0;
+    right: 0;
+    border-color: green;
+}
+#yellow {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    border-color: yellow;
+}
+#blue {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    border-color: blue  ;
+}
+#link {
+    background-color: #3d59c6;
+    width: 100px;
+    margin: auto;
+    top: 0;
+    color: #FEFEFE;
 }
