--- a/coursera/wa4e/sql+php/assigments/2/css/style.css
+++ b/coursera/wa4e/sql+php/assigments/2/css/style.css
@@ -68,3 +68,17 @@ span {
     font-weight: bold;
     padding: 0.1em;
 }
+table {
+    border-collapse: collapse;
+    table-layout: auto;
+}
+table,th,tr,td{
+    border: 1px solid #000;
+}
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+.success {
+    background-color: #aaa;
+    color: #0c0;
+}
