--- a/coursera/wa4e/sql+php/assigments/2/css/style.css
+++ b/coursera/wa4e/sql+php/assigments/2/css/style.css
@@ -69,6 +69,7 @@ span {
     padding: 0.1em;
 }
 table {
+    margin: 0 auto;
     border-collapse: collapse;
     table-layout: auto;
 }
@@ -79,6 +80,8 @@ tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 .success {
-    background-color: #aaa;
+    display: block;
+    text-align: center;
+    background-color: #333;
     color: #0c0;
 }
