--- a/coursera/wa4e/javascript/assigments/1/css/style.css
+++ b/coursera/wa4e/javascript/assigments/1/css/style.css
@@ -19,6 +19,27 @@ h4 {
   width: 900px;
   text-align: center;
 }
+.btn {
+    border: 1px solid #000;
+    background-color: #555;
+  width: 80px;
+  text-decoration: none;
+  text-align: center;
+    color: #eee;
+  padding: 1em;
+  display: inline-block;
+  margin: 1em auto;
+
+}
+.link1 {
+    background-color: #5df;
+  text-decoration: none;
+  text-align: center;
+    color: #333;
+  padding: 1em;
+  display: inline-block;
+
+}
 .link {
     border: 1px solid #000;
     background-color: #4f4;
@@ -95,4 +116,10 @@ tr:nth-child(even) {
 }
 ul {
     list-style: none;
+}
+.secret {
+    display: block;
+    text-align: center;
+    color: #fff;
+    font-weight: bold;
 }
